--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -6,7 +6,7 @@
 \usepackage[colorlinks=TRUE, linkcolor=blue]{hyperref}
 \usepackage{wrapfig,float}
 \usepackage[font=small,skip=5pt]{caption}
-\usepackage{subcaption}
+\usepackage[aboveskip=2pt]{subcaption}
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{dsfont}
@@ -368,47 +368,41 @@ Setting $\lambda = 1$ produced a smoothing that is more consistent with real wor
 
 \begin{figure}[htbp]
   \centering
-<<smoothing, dependson='setup', fig.width=6, fig.height=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+  \begin{subfigure}[t]{0.24\textwidth}
+<<smoothing, dependson='setup', fig.width=4, fig.height=4, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
 set.seed(123)
 uns <- gen_true_data(96, 0.8)
 uns_l <- gather(uns, variable, value, -t)
-p1a <- ggplot(data=uns_l, aes(x=t, y=value, colour=variable)) + geom_line() +labs(title="Unsmoothed Overlaid Lines") +
-    theme(axis.title.x = element_blank(),
-          axis.title.y = element_blank(),
-          axis.text.x = element_blank(),
-          axis.text.y = element_blank(),
-          axis.ticks = element_blank(),
-          legend.position="none")
-p3a <- ggplot(data=uns, aes(x=X1, y=X2)) + geom_point()+ labs(title="Unsmoothed Scatterplot)") +
-    theme(aspect.ratio=1, axis.title.x = element_blank(),
-          axis.title.y = element_blank(),
-          axis.text.x = element_blank(),
-          axis.text.y = element_blank(),
-          axis.ticks = element_blank(),
-          legend.position="none")
-
 set.seed(123)
 sm <- gen_true_data(96, 0.8, smoothed = TRUE)
 sm_l <- gather(sm, variable, value, -t)
-p2a <- ggplot(data=sm_l, aes(x=t, y=value, colour=variable)) + geom_line() + labs(title="Smoothed Overlaid Lines") +
-      theme(axis.title.x = element_blank(),
-          axis.title.y = element_blank(),
-          axis.text.x = element_blank(),
-          axis.text.y = element_blank(),
-          axis.ticks = element_blank(),
-          legend.position="none")
-p4a <- ggplot(data=sm, aes(x=X1, y=X2)) + geom_point() + labs(title="Smoothed Scatterplot") +
-    theme(aspect.ratio=1, axis.title.x = element_blank(),
-          axis.title.y = element_blank(),
-          axis.text.x = element_blank(),
-          axis.text.y = element_blank(),
-          axis.ticks = element_blank(),
-          legend.position="none")
-
-
-grid.arrange(p1a, p2a, p3a, p4a, ncol=2)
+ggplot(data=uns_l, aes(x=t, y=value, colour=variable)) + geom_line() + theme(aspect.ratio=1, axis.title.x = element_blank(), axis.title.y = element_blank(),
+          axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position="none")
 @
-  \caption{The same AR(1) data both unsmoothed and smoothed for both plot designs. t = 96, correlation = 0.86}
+\subcaption{}\label{smootha}
+\end{subfigure}
+\begin{subfigure}[t]{0.24\textwidth}
+<<smoothing2, dependson='smoothing', fig.width=4, fig.height=4, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+ggplot(data=uns, aes(x=X1, y=X2)) + geom_point() + theme(aspect.ratio=1, axis.title.x = element_blank(), axis.title.y = element_blank(),
+          axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position="none")
+@
+\subcaption{}\label{smoothb}
+\end{subfigure}
+\begin{subfigure}[t]{0.24\textwidth}
+<<smoothing3, dependson='smoothing', fig.width=4, fig.height=4, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+ggplot(data=sm_l, aes(x=t, y=value, colour=variable)) + geom_line() + theme(aspect.ratio=1, axis.title.x = element_blank(), axis.title.y = element_blank(),
+          axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position="none")
+@
+\subcaption{}\label{smoothc}
+\end{subfigure}
+\begin{subfigure}[t]{0.24\textwidth}
+<<smoothing4, dependson='smoothing', fig.width=4, fig.height=4, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+ggplot(data=sm, aes(x=X1, y=X2)) + geom_point() + theme(aspect.ratio=1, axis.title.x = element_blank(), axis.title.y = element_blank(),
+          axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position="none")
+@
+\subcaption{}\label{smoothd}
+\end{subfigure}
+  \caption{The same AR(1) data both unsmoothed (\subref{smootha} and \subref{smoothb}) and smoothed (\subref{smoothc} and \subref{smoothd}) for both plot designs. t = 96, correlation = 0.86}
   \label{smoothing}
 \end{figure}
 
@@ -442,44 +436,41 @@ However, for the model fit to power, multiple selections are seperated and given
 
 \begin{figure}[htbp]
   \centering
-<<designs, dependson='setup', fig.width=6, fig.height=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+  \begin{subfigure}[t]{0.24\textwidth}
+<<designs, dependson='setup', fig.width=4, fig.height=4, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
 set.seed(101)
 a <- gen_true_data(24, 0.95)
 b <- gen_true_data(24, -0.95)
 a_l <- gather(a, variable, value, -t)
 b_l <- gather(b, variable, value, -t)
-p1b <- ggplot(data=a_l, aes(x=t, y=value, colour=variable)) + geom_line() + labs(title="Overlaid line graph") +
-      theme(axis.title.x = element_blank(),
-          axis.title.y = element_blank(),
-          axis.text.x = element_blank(),
-          axis.text.y = element_blank(),
-          axis.ticks = element_blank(),
-          legend.position="none")
-p2b <- ggplot(data=b_l, aes(x=t, y=value, colour=variable)) + geom_line() + labs(title="Overlaid line graph") +
-      theme(axis.title.x = element_blank(),
-          axis.title.y = element_blank(),
-          axis.text.x = element_blank(),
-          axis.text.y = element_blank(),
-          axis.ticks = element_blank(),
-          legend.position="none")
-p3b <- ggplot(data=a, aes(x=X1, y=X2)) + geom_point() + labs(title="Scatterplot") +
-      theme(aspect.ratio=1, axis.title.x = element_blank(),
-          axis.title.y = element_blank(),
-          axis.text.x = element_blank(),
-          axis.text.y = element_blank(),
-          axis.ticks = element_blank(),
-          legend.position="none")
-p4b <- ggplot(data=b, aes(x=X1, y=X2)) + geom_point() + labs(title="Scatterplot") +
-      theme(aspect.ratio=1, axis.title.x = element_blank(),
-          axis.title.y = element_blank(),
-          axis.text.x = element_blank(),
-          axis.text.y = element_blank(),
-          axis.ticks = element_blank(),
-          legend.position="none")
-grid.arrange(p1b, p2b, p3b, p4b, ncol=2)
+ggplot(data=a_l, aes(x=t, y=value, colour=variable)) + geom_line() + theme(aspect.ratio=1, axis.title.x = element_blank(), axis.title.y = element_blank(),
+          axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position="none")
 @
-  \caption{The same two data sets in both plot designs. t=24, correlation (left) = 0.946, correlation (right) = -0.943}
-  \label{designs}
+\subcaption{}\label{designa}
+\end{subfigure}
+\begin{subfigure}[t]{0.24\textwidth}
+<<designs2, dependson='designs', fig.width=4, fig.height=4, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+ggplot(data=b_l, aes(x=t, y=value, colour=variable)) + geom_line() + theme(aspect.ratio=1, axis.title.x = element_blank(), axis.title.y = element_blank(),
+          axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position="none")
+@
+\subcaption{}\label{designb}
+\end{subfigure}
+\begin{subfigure}[t]{0.24\textwidth}
+<<designs3, dependson='designs', fig.width=4, fig.height=4, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+ggplot(data=a, aes(x=X1, y=X2)) + geom_point() + theme(aspect.ratio=1, axis.title.x = element_blank(), axis.title.y = element_blank(),
+          axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position="none")
+@
+\subcaption{}\label{designc}
+\end{subfigure}
+\begin{subfigure}[t]{0.24\textwidth}
+<<designs4, dependson='designs', fig.width=4, fig.height=4, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+ggplot(data=b, aes(x=X1, y=X2)) + geom_point() + theme(aspect.ratio=1, axis.title.x = element_blank(), axis.title.y = element_blank(),
+          axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position="none")
+@
+\subcaption{}\label{designd}
+\end{subfigure}
+\caption{The same two data sets in both plot designs. t=24, correlation (\subref{designa} and \subref{designc}) = 0.946, correlation (\subref{designb} and \subref{designd})  = -0.943}
+\label{designs}
 \end{figure}
 
 The web site that the Turk workers accessed to complete the task can be seen at http://104.236.245.153:8080/mahbub/turk18/index.html.  You can also try out the tasks, but your results will not be recorded. (The experiment cost \$210 to run.)
@@ -521,7 +512,7 @@ prop <- mutate(prop, l.power = l.detect/l.attempt,
                upper = difference + t*se,
                lower = difference - t*se)
 ggplot(data=prop) + geom_errorbar(aes(x=r, ymax=upper, ymin=lower)) + geom_point(aes(x=r, y=difference)) +
-        geom_hline(aes(yint=0, colour="red")) + labs(x="Correlation", y="Scatterplot power minus Overlaid Lines") + facet_grid(n~smoothed)
+        geom_hline(aes(yintercept=0, colour="red")) + labs(x="Correlation", y="Difference between plot designs") + facet_grid(n~smoothed)
 @
  \caption{The difference in estimated power (scatter plot power minus overlaid line power) to reveal the true plot by smoothness and sample size with a joint 95\% confidence interval. The red line indicates the point where both plot designs are equally powerful The largest differences appear in negative correlation, where the overlaid lines power drops substantially.}
  \label{powerdiff}
@@ -530,7 +521,7 @@ ggplot(data=prop) + geom_errorbar(aes(x=r, ymax=upper, ymin=lower)) + geom_point
 \begin{figure}[htbp]
   \centering
 <<samplesize, dependson='setup', fig.width=6, fig.height=8, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
-ggplot(data=subset(bylineup, smoothed==0), aes(x=r, y=percent, colour=factor(n))) + geom_smooth(se=F) + geom_point() + facet_grid(design~.) + scale_colour_discrete(name = "Sample size") +  labs(y="Percent Detected", x="Correlation") + theme(legend.position="bottom")
+ggplot(data=subset(bylineup, smoothed==0), aes(x=r, y=percent, colour=factor(n))) + geom_smooth(se=F) + geom_point() + facet_grid(design~.) + scale_colour_discrete(name = "Sample size") +  labs(y="True plot detected rate", x="Correlation") + theme(legend.position="bottom")
 @
  \caption{Replotting figure~\ref{results} to highlight the effects of changes in sample size of unsmoothed data. The scatter plot appears to universally benefit from increased sample sizes but the overlaid lines only see a benefit in positive correlation.}
  \label{samplesize}
@@ -608,7 +599,8 @@ There are two major reasons why a subject may fail to detect the true plot out o
 
 \begin{figure}[htbp]
   \centering
-<<pins, dependson='setup', fig.width=6, fig.height=10, out.width='0.7\\textwidth', echo=FALSE, error=FALSE, message=FALSE, warning=FALSE>>=
+  \begin{subfigure}[htbp]{1\textwidth}
+<<pins, dependson='setup', out.width='1\\linewidth',  out.height='0.2\\textheight', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
 count.setup <- select(full, pic_id, response_0, actual_location, design, smoothed, n)
 count.setup$response_0 <- as.character(count.setup$response_0)
 counts <- data.frame(table(count.setup$pic_id, count.setup$response_0))
@@ -622,25 +614,41 @@ pin <- mutate(pin, r = factor(r),
               percent = count/evals,
               base = 0,
               correlation = diag(as.matrix(correl[pin$lineup, (pin$plot+2)])))
-pin.a <- ggplot(data=filter(pin, smoothed==0 & design == "Scatterplot")) + 
+ggplot(data=filter(pin, smoothed==0 & design == "Scatterplot")) + 
          geom_errorbar(aes(x=correlation, ymin=base, ymax=percent, colour=true)) +
          geom_point(aes(x=correlation, y=percent, colour=true)) + coord_fixed() + facet_grid(n~r) + 
-         labs(title ="Unsmoothed Scatterplot", y="Percent Chosen") + theme(legend.position="none")
-pin.b <- ggplot(data=subset(pin, smoothed==1 & design == "Scatterplot")) + 
+         labs(y="Percent Chosen") + theme(legend.position="none")
+@
+\subcaption{}\label{pin1}
+\end{subfigure}
+\begin{subfigure}[htbp]{1\textwidth}
+<<pin2, dependson='pins', out.width='1\\linewidth', out.height='0.2\\textheight', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+ggplot(data=subset(pin, smoothed==1 & design == "Scatterplot")) + 
          geom_errorbar(aes(x=correlation, ymin=base, ymax=percent, colour=true)) +
          geom_point(aes(x=correlation, y=percent, colour=true)) + coord_fixed()  + facet_grid(n~r) + 
-         labs(title="Smoothed Scatterplot", y="Percent Chosen") + theme(legend.position="none")
-pin.c <- ggplot(data=subset(pin, smoothed==0 & design == "Overlaid Lines")) +
+         labs(y="Percent Chosen") + theme(legend.position="none")
+@
+\subcaption{}\label{pin2}
+\end{subfigure}
+\begin{subfigure}[htbp]{1\textwidth}
+<<pin3, dependson='pin', out.width='1\\linewidth', out.height='0.2\\textheight', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+ggplot(data=subset(pin, smoothed==0 & design == "Overlaid Lines")) +
          geom_errorbar(aes(x=correlation, ymin=base, ymax=percent, colour=true)) +
          geom_point(aes(x=correlation, y=percent, colour=true)) + coord_fixed()  + facet_grid(n~r) +
-         labs(title="Unsmoothed Overlaid Lines", y="Percent Chosen") + theme(legend.position="none")
-pin.d <- ggplot(data=subset(pin, smoothed==1 & design == "Overlaid Lines")) + 
+         labs(y="Percent Chosen") + theme(legend.position="none")
+@
+\subcaption{}\label{pin3}
+\end{subfigure}
+\begin{subfigure}[htbp]{1\textwidth}
+<<pin4, dependson='smoothing', out.width='1\\linewidth', out.height='0.2\\textheight', echo=FALSE, warning=FALSE, message=FALSE, error=FALSE>>=
+ggplot(data=subset(pin, smoothed==1 & design == "Overlaid Lines")) + 
          geom_errorbar(aes(x=correlation, ymin=base, ymax=percent, colour=true)) +
          geom_point(aes(x=correlation, y=percent, colour=true)) + coord_fixed()  + facet_grid(n~r) + 
-         labs(title="Smoothed Overlaid Lines", y="Percent Chosen") + theme(legend.position="none")
-grid.arrange(pin.a, pin.b, pin.c, pin.d, ncol=1)
+         labs(y="Percent Chosen") + theme(legend.position="none")
 @
-  \caption{Pin plots of the subject selections of each lineup, by design, smoothness, true plot correlaition and sample size. On the x-axis is the correlation of the plot (there typically is spurious correlation in the null plots), and on the y-axis is the proportion of times a plot was chosen. Each plot contains data from the three lineups with the requisite factor combination. Red pins indicate null plots and blue indicates the true plot, occasionally the true plot does not seem to appear as it has a proportion of zero and is visually blocked by the red pins. Strongly correlated plot seem to be selected regardless of if the relationship is real or spurious.}
+\subcaption{}\label{pin4}
+\end{subfigure}
+  \caption{Pin plots of the subject selections: (\subref{pin1}) unsmoothed scatterplots, (\subref{pin2}) smoothed scatterplots, (\subref{pin3}) unsmoothed overlaid lines, (\subref{pin4}) smoothed overlaid lines. On the x-axis is the correlation of the plot (there typically is spurious correlation in the null plots), and on the y-axis is the proportion of times a plot was chosen. Each plot contains data from the three lineups with the requisite factor combination. Red pins indicate null plots and blue indicates the true plot, occasionally the true plot does not seem to appear as it has a proportion of zero and is visually blocked by the red pins. Strongly correlated plot seem to be selected regardless of if the relationship is real or spurious.}
   \label{pins}
 \end{figure}
 
