--- a/paper/references.bib
+++ b/paper/references.bib
@@ -177,7 +177,7 @@ month={Dec}
 
 @unpublished{Hofmann:2014,
   author       = {Hofmann, H. and R{\:{o}}ttger, C. and Dixon, P. and Cook, D. and Buja, A.}, 
-  title        = {Three scenarios of visual triangle tests},
+  title        = {Three Scenarios of Visual Triangle Tests},
   note         = {Working Paper},
   month        = {2},
   year         = {2014}
@@ -265,7 +265,7 @@ eprint = {http://dx.doi.org/10.1080/01621459.2013.808157}
 }
 
 @ARTICLE{Nelson,
-title = {Trends and random walks in macroeconmic time series: Some evidence and implications},
+title = {Trends and Random Walks in Macroeconmic Time Series: Some Evidence and Implications},
 author = {Nelson, Charles and Plosser, Charles},
 year = {1982},
 journal = {Journal of Monetary Economics},
@@ -342,7 +342,7 @@ eprint = {http://amstat.tandfonline.com/doi/pdf/10.1080/00031305.1965.10479711}
 }
 
 @article{Turtle,
-title = "Temporal dependence in asset pricing models ",
+title = "Temporal Dependence in Asset Pricing Models ",
 journal = "Economics Letters ",
 volume = "45",
 number = "3",
@@ -358,7 +358,7 @@ abstract = "Estimating and testing conditional models in an unconditional statis
 
 @phdthesis{Vanderplas,
   author       = {Susan VanderPlas}, 
-  title        = {The perception of statistical graphics},
+  title        = {The Perception of Statistical Graphics},
   school       = {Iowa State},
   year         = 2015
 }
@@ -381,7 +381,7 @@ note={trans. W. Ellis, 'A sourcebook of Gestalt psychology', London, Routledge \
 
 @article{Wickham,
 author = {Hadley Wickham and Dianne Cook and Heike Hofmann and Andreas Buja},
-title = {Graphical inference for infovis},
+title = {Graphical Inference for Infovis},
 journal ={IEEE Transactions on Visualization and Computer Graphics},
 volume = {16},
 number = {6},
@@ -400,9 +400,9 @@ address = {Los Alamitos, CA, USA},
   year = {2014}
 }
 
-@article{lane1985,Author={Lane, D.~M. and Anderson, C.~A. and Kellam, K.~L.},Year=1985,Title={Judging the relatedness of variables:  The psychophysics of covariation detection},journal={Journal of Experimental Psychology:  Human Perception and Performance}, Volume=11, Pages={640--649}}
+@article{lane1985,Author={Lane, D.~M. and Anderson, C.~A. and Kellam, K.~L.},Year=1985,Title={Judging the Relatedness of Variables:  The Psychophysics of Covariation Detection},journal={Journal of Experimental Psychology:  Human Perception and Performance}, Volume=11, Pages={640--649}}
 
-@article{webers,author={Rensink, R.~A. and Baldridge, G.},Year=2010,title={The perception of correlation in scatterplots}, Journal={Computer Graphics Forum}, volume=29, pages={1203--1210}}
+@article{webers,author={Rensink, R.~A. and Baldridge, G.},Year=2010,title={The Perception of Correlation in Scatterplots}, Journal={Computer Graphics Forum}, volume=29, pages={1203--1210}}
 
 @article{Cleveland1982, Title={Variables on Scatterplots Look More Highly Correlated When the Scales are Increased}, Author={Cleveland, W.~S. and Diaconis, P. and McGill, R.}, journal={Science, New Series}, volume=216, Number=4550, Year=1982, pages={1138--1141}}
 
